      if lines can be optimised.
    - Graphics::drawVertLine() and drawHorizLine() are protected.
    - Removed GraphicsPort::drawCircle(), drawFilledCircle(), drawHorizLine()
      and drawVertLine().
    - Fixed TinyFont (broken in last release).
    - Moved woopsiRGB() macro from woopsifuncs.h to graphics.h.
    - Moved woopsiDmaFill() and woopsiDmaCopy() into new dmafuncs files.

  - New Features:

  V0.99.2 (20100720)
  
  - Fixes:
    - Replaced clipping code in Gadget::clipRectToHierarchy() with call to new
      Rect functions.
    - PackedFont16::renderChar() aborts correctly if there is nothing to render
      (Lakedaemon).
    - Bitmap::getData(x, y) no longer declared inline (Lakedaemon).
    - Renamed gunsuh15.bmp and gunsuhche15.bmp to gungsuh15.bmp and
      gungsuhche15.bmp respectively.
    - Deleted CourierMono as it was an exact duplicate of Courier.
    - Converted most fonts to PackedFont1.
    - Converted GlyphFont to PackedFont16 (manually altered class to force
      fixed-width).
    - Removed Font and MonoFont classes (PackedFont classes are faster and more
      efficient).
    - bmp2font upgraded to latest version - no longer creates gigantic arrays in
      PackedFont1 fonts; removed support for Font and MonoFont classes.

  - New Features:
    - Added getPath() to FileRequester and FileListBox.
    - Converted Rect struct to class.
    - Added Gadget::getRelativeX() and getRelativeY().
    - Replaced x, y, width and height members of Gadget class with a Rect.

  V0.99.1 (20100524)
  
  - Fixes:
    - Rewrote SliderVertical and SliderHorizontal again to improve accuracy.
    - Removed jumpGrip() from all slider gagdets.
    - Added setValueWithBitshift() to all slider gadgets.
    - Added getMinimumStep() to SliderVertical and SliderHorizontal.
    - Removed getValuesPerPixel() from all slider gadgets.

  V0.99 (20100520)
  
  - Fixes:
    - ProgressBar text greyed out when disabled.